# COSMOS

./: .gitignore  Cargo.toml  README.md  index.html  log.txt  web_server.py
Runner-Scheduler/: Cargo.toml
Runner-Scheduler/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
csv_generator/: Cargo.toml  data_set.csv
csv_generator/benches/: csv_generator_benchmark.rs
csv_generator/src/: lib.rs  main.rs
data/CSV/: ALL_TABLES.csv  PERSONNE.csv  Personne2.csv
data/SemanticTestData/: FM_1.json  FSE_1.json  FS_1.json  LDD_example.json
data/transferFile/: result.csv  syntaxic_parsing.json
engine/: Cargo.toml  TestCosmosFichierResultat.csv
engine/benches/res/: data.csv
engine/benches/src/: main.rs
engine/data/CSV/: ALL_COLUMNS.csv  ALL_TABLE.csv  COEDSESSEEDFFDSSUNAL.csv  Personne100.csv  Personne2.csv
engine/data/SemanticTestData/: FSE_1.json  FS_1.json
engine/data/transferFile/: result.csv  syntaxic_parsing.json
engine/src/: csv_to_string.rs  main.rs
engine/syntaxic_parser/src/: lib.rs
engine/syntaxic_parser/textX_grammar/: syntaxic_parser.py
engine/textX_grammar/: grammar_file.tx
runner-scheduler/: Cargo.toml  semantique.json
runner-scheduler/src/: lib.rs  operator.rs
runner_scheduler/: Cargo.toml  semantique.json  semantique2.json  semantique3.json
runner_scheduler/src/: call_create.rs  intermediary_request.rs  lib.rs  logical_statement.rs  operator.rs  relation_creater.rs  relation_drop.rs  relation_insert.rs  where_statement.rs
semantic_parser/: Cargo.toml
semantic_parser/TestData/: FM_1.json  FSE_1.json  FS_1.json
semantic_parser/src/: error_creator.rs  lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
server/test/: .gitignore  Cargo.toml  client  main
syntaxic_parser/: Cargo.toml
syntaxic_parser/src/: lib.rs  main.rs
syntaxic_parser/textX_grammar/: grammar_file.tx  syntaxic_parser.py  textx_for_LDD.tx
view/: Cargo.toml
web_serv/: index.html  myAdmin.html  web_server.py
(+44 files in other folders)
