[package]
name = "csv_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random_name_generator = "0.3.6"
csv = "1.3.0"
rand = "0.8.5"

#[dev-dependencies]
#criterion = "0.5.1"

#[[bench]]
#name = "csv_generator_benchmark"
#harness = false