[package]
name = "engine"
version = "0.1.0"
edition = "2021"
authors = ["Conrath Matthieu + Callendret Clément"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
syntaxic_parser = {path = "../syntaxic_parser"}
runner-scheduler={path= "../runner_scheduler" }
semantic_parser = {path = "../semantic_parser"}
view = {path = "../view"}
serde_json = "1.0.113"

[dev-dependencies]
criterion = "0.5.1"
sysinfo = "0.30.7"
rand = "0.8.5"
random_name_generator = "0.3.6"


[[bench]]
name = "src"
harness = false

[lib]
name = "engine"
path = "src/csv_to_string.rs"


